<resources>
    <string name="app_name">Projet_TER</string>
    <string name="add">+</string>
    <string name="title_app">Argos</string>
    <string name="todo">TODO</string>
    <string name="r_glage">Réglage</string>
    <string name="Hue">Hue</string>
    <string name="Saturation">Saturation</string>
    <string name="Valeur">Valeur</string>
    <string name="Aire">Aire</string>
    <string name="auto">Auto</string>
    <string name="algorithme" >Algorithme :</string>
    <string name="k_means">K-MEANS</string>
    <string name="aire_minimale_d_une_zone">Aire minimale d\'une zone</string>
    <string name="nombre_de_clusters">Nombre de groupes</string>
    <string name="nombre_d_it_rations">Nombre d\'itérations</string>
    <string name="seuil">Seuil</string>
    <string name="h">H</string>
    <string name="s">S</string>
    <string name="v">V</string>
    <string name="info">Info</string>
    <string name="fermer">Fermer</string>
    <string name="config">Config</string>
    <string name="brush" />
    <string name="filter" />
    <string name="configuration">Configuration</string>
    <string name="couleur">Couleur</string>
    <string name="camera">Camera</string>
    <string name="analyse">Analyse</string>
    <string name="masque">Masque</string>
    <string name="details">Détails</string>
    <string name="contenue">Contenue</string>
    <string name="filtres">Filtres</string>
    <string name="argiles">Argiles</string>
    <string name="sables">Sables</string>
    <string name="conglomera">Conglomerat</string>
    <string name="indeterminer">Indeterminé</string>
    <string name="contour">Contour</string>
    <string name="pr_cision">Précision</string>
    <string name="taille_des_divisions">Taille des divisions</string>
    <string name="_0">(0)</string>
    <string name="_1750">(1750)</string>
    <string name="_3">(3)</string>
    <string name="_90">(90)</string>
    <string name="_5">(5)</string>
</resources>