<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <org.opencv.android.JavaCameraView
        android:id="@+id/camera_view"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <Switch
        android:id="@+id/AutoModeSwitch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="46dp"
        android:layout_marginEnd="36dp"
        android:checked="true"
        android:scaleX="1.5"
        android:scaleY="1.5"
        android:text="@string/auto"
        android:textColor="@drawable/switch_style"
        android:thumbTint="@drawable/switch_style"
        android:trackTint="@drawable/switch_style"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="UseSwitchCompatOrMaterialXml" />

    <ImageButton
        android:id="@+id/settingsButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#00FFFFFF"
        android:layout_marginBottom="26dp"
        android:layout_marginEnd="26dp"
        app:layout_constraintBottom_toTopOf="@+id/ButtonLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/ic_sliders_solid"
        app:tint="#ffffff" />

    <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/ButtonLayout"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@drawable/bg_shape"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="36dp"
                android:layout_marginTop="28dp"
                android:text="@string/r_glage"
                android:textColor="#2196F3"
                android:textSize="30sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/seekBarText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="80dp"
                android:text="@string/Hue"
                android:textColor="#2196F3"
                android:textSize="14sp"
                android:visibility="invisible"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <SeekBar
                android:id="@+id/seekBar"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:backgroundTint="#2196F3"
                android:max="254"
                android:min="1"
                android:progressTint="#2196F3"
                android:thumbTint="#2196F3"
                android:visibility="invisible"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/seekBarText" />

            <TextView
                android:id="@+id/seekBarText2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="35dp"
                android:text="@string/Saturation"
                android:textColor="#2196F3"
                android:textSize="14sp"
                android:visibility="invisible"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/seekBar" />

            <SeekBar
                android:id="@+id/seekBar2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:backgroundTint="#2196F3"
                android:max="254"
                android:min="1"
                android:progressTint="#2196F3"
                android:thumbTint="#2196F3"
                android:visibility="invisible"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/seekBarText2" />


            <TextView
                android:id="@+id/seekBarText3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="35dp"
                android:text="@string/Valeur"
                android:textColor="#2196F3"
                android:textSize="14sp"
                android:visibility="invisible"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/seekBar2" />

            <SeekBar
                android:id="@+id/seekBar3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:backgroundTint="#2196F3"
                android:max="254"
                android:min="1"
                android:progressTint="#2196F3"
                android:thumbTint="#2196F3"
                android:visibility="invisible"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/seekBarText3" />

            <TextView
                android:id="@+id/seekBarText4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="35dp"
                android:text="@string/Aire"
                android:textColor="#2196F3"
                android:textSize="14sp"
                android:visibility="invisible"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/seekBar3" />

            <SeekBar
                android:id="@+id/seekBar4"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:backgroundTint="#2196F3"
                android:max="254"
                android:min="1"
                android:progressTint="#2196F3"
                android:thumbTint="#2196F3"
                android:visibility="invisible"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/seekBarText4" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/ZoomLayout"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/settingsButton"
        app:layout_constraintTop_toBottomOf="@+id/AutoModeSwitch"
        android:layout_marginEnd="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="20dp"
        >
<!--
        <ImageButton
            android:id="@+id/zoomButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:layout_constraintBottom_toBottomOf="parent"
            android:layout_constraintEnd_toEndOf="parent"
            android:layout_constraintStart_toStartOf="parent"
            app:srcCompat="@drawable/ic_magnifying_glass_plus_solid" />
-->
        <android.widget.VerticalSeekBar
            android:id="@+id/zoomBar"
            style="@style/Widget.AppCompat.SeekBar.Discrete"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:thumb="@drawable/seekbar_thumb"
            android:progressDrawable="@drawable/seekbar_style"
            android:max="10"
            android:min="0"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>



</androidx.constraintlayout.widget.ConstraintLayout>